# ghc-timings-report

./: .gitignore  ghc-timings.cabal
GhcTimings/: Collect.hs  Report.hs  Types.hs
exe/: Main.hs
files/: main.css
