cabal-version:       3.0
synopsis:            Get statistical report about how long files were compiled.
description:         Simple package that can gather information about compilation
                     time for later analysis.

bug-reports:         https://github.com/qnikst/ghc-timings-report
name:                ghc-timings
version:             0.1
license:             MIT
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
data-files:          files/*.gnuplot
                     files/*.css


----------------------------------------------------------------

common extensions
  default-language:    GHC2021
  default-extensions:  NoPolyKinds
                       DerivingVia
                       LambdaCase
                       DeriveAnyClass
                       MultiWayIf
                       --
                       NoFieldSelectors
                       DuplicateRecordFields
                       OverloadedRecordDot


library
  import:              extensions
  build-depends:       base            >= 4.13
                     , aeson           >= 2
                     , cassava
                     , regex-applicative >=0.3.4
                     , text            >= 2
                     , streaming       >= 0.2
                     , containers
                     , transformers
                     , filepath
                     , lens
                     , split
                     , directory
                       -- HTML stuff
                     , blaze-colonnade
                     , blaze-html
                     , blaze-markup
                     , colonnade
  exposed-modules:
                 GhcTimings.Types
                 GhcTimings.Collect
                 GhcTimings.Report

executable ghc-timings
  import:              extensions
  main-is:             Main.hs
--  autogen-modules:     Paths_ghc_timings
  hs-source-dirs:      exe
  build-depends:       base >=4.13
                     , ghc-timings
                     , aeson
                     , bytestring
                     , optparse-applicative
                     , directory
                     , filepath
                     , blaze-markup
                     , containers
                     , text

--                     , blaze-html

-- executable ghc-timings
--   main-is:             Main.hs
--   autogen-modules:     Paths_ghc_timings
--   other-modules:       Compare
--                        GhcFile
--                        GhcBuildPhase
--                        Generate
--                        Report
--                        Paths_ghc_timings
--   hs-source-dirs:      src
--                        .
--   default-extensions:  DerivingStrategies
--                        DeriveGeneric
--                        DeriveAnyClass
--                        DerivingVia
--                        LambdaCase
--                        OverloadedStrings
--                        RecordWildCards
--                        ViewPatterns
--   -- other-extensions:
--   build-depends:       base >=4.13,
--                        aeson,
--                        binary,
--                        blaze-colonnade,
--                        blaze-html,
--                        blaze-markup,
--                        bytestring,
--                        cassava,
--                        colonnade,
--                        conduit >= 1.3,
--                        containers,
--                        directory,
--                        resourcet,
--                        filepath,
--                        optparse-applicative,
--                        process,
--                        text,
--                        text-show,
--                        these,
--                        vector
--   ghc-options: -Wall
--   default-language:    Haskell2010
